--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 body {
-    background: url(/imgs/SFB.jpg);
-    background-repeat: no-repeat;
+    background-image: linear-gradient(red, orange, yellow, red);
     background-size: cover;
 }
