--- a/css/players.css
+++ b/css/players.css
@@ -1,3 +1,6 @@
-.image {
- height: 450px;
+.hero-section {
+  background-image: url('/imgs/SFB.jpg');
+  background-size: cover;
+  background-position: center;
+  height: 400px;
 }
