--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,5 @@ body {
   background-image: url('/imgs/SFB.jpg');
   background-size: cover;
   background-position: center;
-  height: 55vh;
-  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.8);
+  height: 400px;
 }
