--- a/players.css
+++ b/players.css
@@ -1,5 +1,5 @@
 .hero-section {
-  background-image: url('/imgs/SFB.jpg');
+  background-image: url('imgs/SFB.jpg');
   background-size: cover;
   background-position: center;
   height: 400px;
