--- a/players.css
+++ b/players.css
@@ -4,3 +4,83 @@
   background-position: center;
   height: 400px;
 }
+
+.text-white {
+    text-shadow: 1px 1px 0 black,
+        -1px 1px 0 black,
+        1px -1px 0 black,
+        -1px -1px 0 black,
+        0px 1px 0 black,
+        0px -1px 0 black,
+        -1px 0px 0 black,
+        1px 0px 0 black,
+        2px 2px 0 black,
+        -2px 2px 0 black,
+        2px -2px 0 black,
+        -2px -2px 0 black,
+        0px 2px 0 black,
+        0px -2px 0 black,
+        -2px 0px 0 black,
+        2px 0px 0 black,
+        1px 2px 0 black,
+        -1px 2px 0 black,
+        1px -2px 0 black,
+        -1px -2px 0 black,
+        2px 1px 0 black,
+        -2px 1px 0 black,
+        2px -1px 0 black,
+        -2px -1px 0 black;
+}
+
+.nav-link {
+    color: #ffffff;
+    font-family: "comic-sans-ms", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    text-shadow: 1px 1px 0 black,
+        -1px 1px 0 black,
+        1px -1px 0 black,
+        -1px -1px 0 black,
+        0px 1px 0 black,
+        0px -1px 0 black,
+        -1px 0px 0 black,
+        1px 0px 0 black,
+        2px 2px 0 black,
+        -2px 2px 0 black,
+        2px -2px 0 black,
+        -2px -2px 0 black,
+        0px 2px 0 black,
+        0px -2px 0 black,
+        -2px 0px 0 black,
+        2px 0px 0 black,
+        1px 2px 0 black,
+        -1px 2px 0 black,
+        1px -2px 0 black,
+        -1px -2px 0 black,
+        2px 1px 0 black,
+        -2px 1px 0 black,
+        2px -1px 0 black,
+        -2px -1px 0 black;
+}
+
+.nav-link:hover {
+    color: #ffffff;
+}
+
+
+.nav-link:focus,
+.nav-link.active {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+body {
+    background-image: url(/imgs/DreamTeam\ BG.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.card-img-top {
+  width: 100%;
+  height: 420px;
+}
