--- a/about.css
+++ b/about.css
@@ -1,6 +1,5 @@
 body {
-    background-image: url(imgs/DreamTeam\ BG.png);
-    background-repeat: no-repeat;
+    background-color: orangered;
     background-size: cover;
     text-align: center;
 }
