--- a/players.css
+++ b/players.css
@@ -75,9 +75,9 @@
 }
 
 body {
-    background-image: url(/imgs/DreamTeam\ BG.png);
-    background-repeat: no-repeat;
+    background-color: orangered;
     background-size: cover;
+    text-align: center;
 }
 
 .card-img-top {
